Refactor: introduce service layer, fix bugs, add unit tests